# GroundingDINO

./: .gitignore  pyproject.toml  setup.py  setup.sh  test.ipynb
groundingdino/util/: inference.py
